Ash Tray: Update guest mode user avatar to conform to specs.

According to the specs, the guest mode user avatar should look like a disabled
shortcut button.

BUG=899820

Change-Id: I3a3b895f32ddbee83475d096cfe98a456fcd3abb
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1582602
Commit-Queue: Tim Song <tengs@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#654088}

Former-commit-id: 357fad9e92d98c40494ea5bfe24230affafa3a46