ash/system/unified/top_shortcut_button.h
@@ -15,6 +15,7 @@ namespace ash {
 // frequently used features e.g. lock screen, settings, and shutdown.
 class TopShortcutButton : public views::ImageButton {
  public:
+  explicit TopShortcutButton(const gfx::VectorIcon& icon);
   TopShortcutButton(views::ButtonListener* listener,
                     const gfx::VectorIcon& icon,
                     int accessible_name_id);
